album and carousel caption small bug

--- a/pari/static/css/album_list.less
+++ b/pari/static/css/album_list.less
@@ -115,8 +115,9 @@
 .album-grid {
     .album {
         @media(max-width:767px){
-          width: 323px;
-          margin-left: 0px;
+          width: 100%;
+          margin: 0 auto;
+          margin-bottom: 18px;
         }
         background-color: @alternateBgColor;
         padding: 10px;
