--- a/pari/static/css/base.less
+++ b/pari/static/css/base.less
@@ -667,7 +667,7 @@ a.pari-link {
           text-shadow: none;
           left: 0;
           right: 0;
-          bottom: 80px;
+          bottom: 120px;
           border-radius: 0px;
           text-shadow: none;
       }
